--- a/ExilenceNextClient/src/assets/styles/styles.scss
+++ b/ExilenceNextClient/src/assets/styles/styles.scss
@@ -54,7 +54,10 @@ a {
 }
 
 .spinner-container {
+  display: flex;
+  height: 100%;
   align-self: center;
+  align-items: center;
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
