Added tab group to settings drawer

--- a/ExilenceNextClient/src/app/auth/net-worth/containers/net-worth-page/net-worth-page.component.html
+++ b/ExilenceNextClient/src/app/auth/net-worth/containers/net-worth-page/net-worth-page.component.html
@@ -1,4 +1,4 @@
-<mat-tab-group #tabGroup id="tabGroup" [(selectedIndex)]="selectedIndex">
+<mat-tab-group #tabGroup id="tabGroup" class="net-worth-tab-group" [(selectedIndex)]="selectedIndex">
     <mat-tab #currentGrpTab id="currentGrpTab" class="active">
         <ng-template mat-tab-label>
             <mat-icon class="tab-icon">show_chart</mat-icon>
