--- a/ExilenceNextClient/src/assets/styles/styles.scss
+++ b/ExilenceNextClient/src/assets/styles/styles.scss
@@ -48,9 +48,11 @@ a {
 }
 
 .mat-tab-group {
-  position: absolute;
-  padding: 10px 25px 25px 25px;
-  width: calc(100% - #{$main-padding}* 2);
+  &.net-worth-tab-group {
+    position: absolute;
+    padding: 10px 25px 25px 25px;
+    width: calc(100% - #{$main-padding}* 2);
+  }
 }
 
 .spinner-container {
