--- a/ExilenceNextClient/src/app/auth/net-worth/components/net-worth-item-table/net-worth-item-table.component.html
+++ b/ExilenceNextClient/src/app/auth/net-worth/components/net-worth-item-table/net-worth-item-table.component.html
@@ -1,7 +1,14 @@
 <div class="net-worth-table-outer-container float--left">
-    <mat-form-field class="item-filter">
-        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-    </mat-form-field>
+    <div class="table-tools-container">
+        <div class="item-filter-container">
+            <mat-form-field class="item-filter">
+                <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+            </mat-form-field>
+        </div>
+        <div class="export-btn-container">
+            <button mat-raised-button color="primary" (click)="export()" type="button" disabled>Export</button>
+        </div>
+    </div>
     <div class="net-worth-table-container">
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 net-worth-table" matSort
             matSortActive="value" matSortDisableClear matSortDirection="desc">
@@ -42,8 +49,7 @@
                 <th mat-header-cell *matHeaderCellDef mat-sort-header="level"> Level </th>
                 <td mat-cell *matCellDef="let element">
                     <span *ngIf="element.level > 0" class="level">{{element.level}}</span>
-                    <span *ngIf="element.level == 0 || element.level == undefined"
-                        class="not-available">n/a</span>
+                    <span *ngIf="element.level == 0 || element.level == undefined" class="not-available">n/a</span>
                 </td>
             </ng-container>
 
