Added export for net worth items

--- a/ExilenceNextClient/src/app/auth/net-worth/components/net-worth-item-table/net-worth-item-table.component.html
+++ b/ExilenceNextClient/src/app/auth/net-worth/components/net-worth-item-table/net-worth-item-table.component.html
@@ -6,7 +6,7 @@
             </mat-form-field>
         </div>
         <div class="export-btn-container">
-            <button mat-raised-button color="primary" (click)="export()" type="button" disabled>Export</button>
+            <button mat-raised-button color="primary" (click)="export()" type="button">Export</button>
         </div>
     </div>
     <div class="net-worth-table-container">
