Layout tweaks to top bar

--- a/ExilenceNextClient/src/app/auth/net-worth/components/net-worth-item-table/net-worth-item-table.component.scss
+++ b/ExilenceNextClient/src/app/auth/net-worth/components/net-worth-item-table/net-worth-item-table.component.scss
@@ -4,14 +4,14 @@
   display: flex;
   width: 100%;
   .item-filter-container {
-    width: 85%;
+    width: calc(100% - #{$main-btn-width});
     .item-filter {
       width: 100%;
     }
   }
 
   .export-btn-container {
-    width: 15%;
+    width: $main-btn-width;
     padding-left: 10px;
     button {
       width: 100%;
