--- a/ExilenceNextClient/src/assets/styles/_variables.scss
+++ b/ExilenceNextClient/src/assets/styles/_variables.scss
@@ -5,7 +5,7 @@ $main-padding: 25px;
 $main-margin: 25px;
 $container-padding: 25px;
 $version-font-color: #cecece;
-
+$main-btn-width: 150px;
 $background-color: #303030;
 $background-color-secondary: #171717;
 $background-overlay: linear-gradient(rgba(16, 16, 16, 0.8), rgba(16, 16, 16, 0.8));
@@ -40,7 +40,8 @@ $top-bar-height: 70px;
 $net-worth-content-p-top: 85px;
 $net-worth-content-p-bot: 125px;
 $net-worth-content-height: calc(100vh - #{$toolbar-height} - #{$net-worth-content-p-bot} - #{$net-worth-content-p-top});
-$global-config-width: 150px;
+$global-config-width: 200px;
+$networth-placeholder-color: rgb(206, 206, 206);
 /* #endregion */
 
 /* #region Item */
