--- a/ExilenceNextClient/src/app/auth/net-worth/components/top-bar/top-bar.component.scss
+++ b/ExilenceNextClient/src/app/auth/net-worth/components/top-bar/top-bar.component.scss
@@ -8,7 +8,7 @@
     .config {
       &.specific-config {
         display: flex;
-        justify-content: flex-end;
+        justify-content: flex-start;
         width: calc(100% - #{$global-config-width});
       }
       &.global-config {
@@ -19,25 +19,47 @@
     }
   }
 
+  .btn-container {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+    button {
+      margin-top: 5px;
+    }
+  }
+
   .networth-wrapper {
     float: left;
     margin-right: $main-margin;
     min-width: 100px;
+    margin-top: -5px;
     .title {
-      font-size: 14px;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      transform-origin: 0 0;
+      font-size: 0.720rem;
+      color: rgba(255, 255, 255, 0.7);
     }
 
     .networth-inner-wrapper {
-      margin-top: 10px;
-
+      margin-top: 5px;
       .networth {
+        font-size: 14px;
         color: $chaos-orb-color;
         > * {
           color: $chaos-orb-color;
         }
+        &.with-icon {
+          > * {
+            vertical-align: middle;
+          }
+        }
       }
 
       .networth-placeholder {
+        font-size: 14px;
         color: $networth-placeholder-color;
       }
     }
