--- a/ExilenceNextClient/src/app/core/components/snapshot-progress-snackbar/snapshot-progress-snackbar-snack/snapshot-progress-snackbar-snack.component.html
+++ b/ExilenceNextClient/src/app/core/components/snapshot-progress-snackbar/snapshot-progress-snackbar-snack/snapshot-progress-snackbar-snack.component.html
@@ -1,5 +1,5 @@
 <div class="progress-snackbar-content">
-    <div class="h-container">
+    <div class="h-container snapshot-title">
         <mat-icon class="h-icon">get_app</mat-icon>
         <h3 class="mat-h3">{{'SNAPSHOT.IN_PROGRESS' | translate }}</h3>
     </div>
