--- a/ExilenceNextClient/src/app/auth/net-worth/containers/net-worth-page/net-worth-page.component.html
+++ b/ExilenceNextClient/src/app/auth/net-worth/containers/net-worth-page/net-worth-page.component.html
@@ -17,7 +17,7 @@
         [selectedTabs$]="selectedTabs$" (tabSelectionChanged)="tabsChanged($event)"></app-top-bar>
 
     <app-net-worth-graph [selectedTabs$]="selectedTabs$" [loading]="graphLoading" [tabChartData]="tabChartData" [playerChartData]="playerChartData" [colorScheme]="colorScheme"
-        [hidden]="selectedIndex != 0 || (tabChartData.length == 0 && playerChartData.length == 0)"></app-net-worth-graph>
+        [hidden]="selectedIndex != 0"></app-net-worth-graph>
 
     <app-net-worth-item-table [tableData]="tableData" [hidden]="selectedIndex != 1"></app-net-worth-item-table>
 </div>
