--- a/ExilenceNextClient/src/app/auth/net-worth/components/top-bar/top-bar.component.html
+++ b/ExilenceNextClient/src/app/auth/net-worth/components/top-bar/top-bar.component.html
@@ -24,7 +24,7 @@
         <ng-container *ngSwitchCase="0">
           <mat-form-field>
             <mat-label>
-              {{ ((stashtabList$ | async).length == 0 ? 'NETWORTH.NO_STASHTABS' : 'NETWORTH.SELECT_STASHTABS') | translate}}
+              {{ ((stashtabList$ | async) == undefined || (stashtabList$ | async).length == 0 ? 'NETWORTH.NO_STASHTABS' : 'NETWORTH.SELECT_STASHTABS') | translate}}
             </mat-label>
             <mat-select [formControl]="stashtabs" (selectionChange)="tabsChanged($event)" multiple
               [disabled]="(status$ | async).snapshotting || (stashtabList$ | async).length == 0">
