Changed width of filter input

--- a/ExilenceNextClient/src/app/auth/net-worth/components/net-worth-item-table/net-worth-item-table.component.scss
+++ b/ExilenceNextClient/src/app/auth/net-worth/components/net-worth-item-table/net-worth-item-table.component.scss
@@ -6,7 +6,7 @@
   .item-filter-container {
     width: calc(100% - #{$main-btn-width});
     .item-filter {
-      width: 100%;
+      width: 300px;
     }
   }
 
