--- a/ExilenceNextClient/src/app/auth/net-worth/containers/net-worth-page/net-worth-page.component.html
+++ b/ExilenceNextClient/src/app/auth/net-worth/containers/net-worth-page/net-worth-page.component.html
@@ -13,7 +13,7 @@
     </mat-tab>
 </mat-tab-group>
 <div class="container net-worth-content">
-    <app-top-bar [lastSnapshot$]="lastSnapshot$" [totalValue$]="totalValue$" [selectedTabsValue$]="selectedTabsValue$" [stashtabList$]="stashtabList$" [moduleIndex$]="moduleIndex$" [playerList$]="playerList$"
+    <app-top-bar [netWorthSettings$]="netWorthSettings$" [lastSnapshot$]="lastSnapshot$" [totalValue$]="totalValue$" [selectedTabsValue$]="selectedTabsValue$" [stashtabList$]="stashtabList$" [moduleIndex$]="moduleIndex$" [playerList$]="playerList$"
         [selectedTabs$]="selectedTabs$" (tabSelectionChanged)="tabsChanged($event)"></app-top-bar>
 
     <app-net-worth-graph [stashtabList$]="stashtabList$" [selectedTabs$]="selectedTabs$" [loading]="graphLoading" [tabChartData]="tabChartData" [playerChartData]="playerChartData" [colorScheme]="colorScheme"
