--- a/ExilenceNextClient/src/app/core/components/settings-bottom-sheet-content/settings-bottom-sheet-content.component.scss
+++ b/ExilenceNextClient/src/app/core/components/settings-bottom-sheet-content/settings-bottom-sheet-content.component.scss
@@ -1,6 +1,7 @@
 @import "./../../../../assets/styles/variables";
 
 .setting-tab-content {
+    padding: 0 10px 0 10px;
     .setting-inner-content {
         margin-top: $main-margin;
     }
