--- a/ExilenceNextClient/src/assets/styles/_variables.scss
+++ b/ExilenceNextClient/src/assets/styles/_variables.scss
@@ -17,6 +17,7 @@ $scrollbar-background-color: #1d1d1d;
 $main-font: 'Roboto';
 $font-color: #fff;
 $warning-color: #ffbd56;
+$success-color: #51e2a0;
 $information-color: $font-color;
 $error-color: #f74b4b;
 $secondary-font-color: #cecece;
