--- a/ExilenceNextClient/src/app/auth/net-worth/components/top-bar/top-bar.component.html
+++ b/ExilenceNextClient/src/app/auth/net-worth/components/top-bar/top-bar.component.html
@@ -22,6 +22,12 @@
       <ng-container [ngSwitch]="moduleIndex$ | async">
         <!-- todo: wrap this case as a component, to re use for case 1 -->
         <ng-container *ngSwitchCase="0">
+          <mat-form-field class="mr--15">
+            <mat-select [formControl]="leagues" (selectionChange)="leagueChanged($event)"
+              [disabled]="(status$ | async).snapshotting" placeholder="{{'LEAGUE.SELECT_LEAGUE' | translate}}">
+              <mat-option *ngFor="let item of leagues$ | async" [value]="item">{{item}}</mat-option>
+            </mat-select>
+          </mat-form-field>
           <mat-form-field>
             <mat-label>
               {{ ((stashtabList$ | async) == undefined || (stashtabList$ | async).length == 0 ? 'NETWORTH.NO_STASHTABS' : 'NETWORTH.SELECT_STASHTABS') | translate}}
@@ -33,8 +39,16 @@
           </mat-form-field>
         </ng-container>
         <ng-container *ngSwitchCase="1">
+          <mat-form-field class="mr--15">
+            <mat-select [formControl]="leagues" (selectionChange)="leagueChanged($event)"
+              [disabled]="(status$ | async).snapshotting" placeholder="{{'LEAGUE.SELECT_LEAGUE' | translate}}">
+              <mat-option *ngFor="let item of leagues$ | async" [value]="item">{{item}}</mat-option>
+            </mat-select>
+          </mat-form-field>
           <mat-form-field>
-            <mat-label>{{ 'NETWORTH.SELECT_STASHTABS' | translate}}</mat-label>
+            <mat-label>
+              {{ ((stashtabList$ | async) == undefined || (stashtabList$ | async).length == 0 ? 'NETWORTH.NO_STASHTABS' : 'NETWORTH.SELECT_STASHTABS') | translate}}
+            </mat-label>
             <mat-select [formControl]="stashtabs" (selectionChange)="tabsChanged($event)" multiple
               [disabled]="(stashtabList$ | async).length == 0">
               <mat-option *ngFor="let tab of stashtabList$ | async" [value]="tab.id">{{tab.n}}</mat-option>
@@ -59,8 +73,7 @@
             *ngIf="(lastSnapshot$ | async)">{{'NETWORTH.LAST_SNAPSHOT_LABEL_PREFIX' | translate}}
             {{getFromNow((lastSnapshot$ | async))}}</span>
         </div>
-        <button mat-raised-button color="primary"
-          [disabled]="(status$ | async).snapshotting"
+        <button mat-raised-button color="primary" [disabled]="(status$ | async).snapshotting"
           (click)="doSnapshot()">{{'ACTIONS.SNAPSHOT' | translate}}</button>
       </div>
     </div>
