--- a/ExilenceNextClient/src/app/auth/net-worth/containers/net-worth-page/net-worth-page.component.html
+++ b/ExilenceNextClient/src/app/auth/net-worth/containers/net-worth-page/net-worth-page.component.html
@@ -13,8 +13,8 @@
     </mat-tab>
 </mat-tab-group>
 <div class="container net-worth-content">
-    <app-top-bar [netWorthSettings$]="netWorthSettings$" [lastSnapshot$]="lastSnapshot$" [totalValue$]="totalValue$" [selectedTabsValue$]="selectedTabsValue$" [stashtabList$]="stashtabList$" [moduleIndex$]="moduleIndex$" [playerList$]="playerList$"
-        [selectedTabs$]="selectedTabs$" (tabSelectionChanged)="tabsChanged($event)"></app-top-bar>
+    <app-top-bar [leagues$]="leagues$" [netWorthSettings$]="netWorthSettings$" [lastSnapshot$]="lastSnapshot$" [totalValue$]="totalValue$" [selectedTabsValue$]="selectedTabsValue$" [stashtabList$]="stashtabList$" [moduleIndex$]="moduleIndex$" [playerList$]="playerList$"
+        [selectedTabs$]="selectedTabs$" [selectedLeague$]="selectedLeague$" (tabSelectionChanged)="tabsChanged($event)" (leagueSelectionChanged)="leagueChanged($event)"></app-top-bar>
 
     <app-net-worth-graph [stashtabList$]="stashtabList$" [selectedTabs$]="selectedTabs$" [loading]="graphLoading" [tabChartData]="tabChartData" [playerChartData]="playerChartData" [colorScheme]="colorScheme"
         [hidden]="selectedIndex != 0"></app-net-worth-graph>
