Truncate table tab array

--- a/ExilenceNextClient/src/assets/styles/styles.scss
+++ b/ExilenceNextClient/src/assets/styles/styles.scss
@@ -273,6 +273,9 @@ a {
 .mat-cell {
   font-size: 12px !important;
   white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 200px;
 }
 
 .mat-paginator {
