--- a/ExilenceNextClient/src/app/auth/net-worth/components/top-bar/top-bar.component.html
+++ b/ExilenceNextClient/src/app/auth/net-worth/components/top-bar/top-bar.component.html
@@ -24,7 +24,7 @@
         <ng-container *ngSwitchCase="0">
           <mat-form-field class="mr--15">
             <mat-select [formControl]="leagues" (selectionChange)="leagueChanged($event)"
-              [attr.disabled]="(status$ | async).snapshotting" placeholder="{{'LEAGUE.SELECT_LEAGUE' | translate}}">
+              [disabled]="(status$ | async).snapshotting" placeholder="{{'LEAGUE.SELECT_LEAGUE' | translate}}">
               <mat-option *ngFor="let item of leagues$ | async" [value]="item">{{item}}</mat-option>
             </mat-select>
           </mat-form-field>
@@ -33,7 +33,7 @@
               {{ ((stashtabList$ | async) == undefined || (stashtabList$ | async).length == 0 ? 'NETWORTH.NO_STASHTABS' : 'NETWORTH.SELECT_STASHTABS') | translate}}
             </mat-label>
             <mat-select [formControl]="stashtabs" (selectionChange)="tabsChanged($event)" multiple
-              [attr.disabled]="(stashtabList$ | async).length == 0">
+              [disabled]="(stashtabList$ | async).length == 0">
               <mat-option *ngFor="let tab of stashtabList$ | async" [value]="tab.id">{{tab.n}}</mat-option>
             </mat-select>
           </mat-form-field>
@@ -41,7 +41,7 @@
         <ng-container *ngSwitchCase="1">
           <mat-form-field class="mr--15">
             <mat-select [formControl]="leagues" (selectionChange)="leagueChanged($event)"
-              [attr.disabled]="(status$ | async).snapshotting" placeholder="{{'LEAGUE.SELECT_LEAGUE' | translate}}">
+              [disabled]="(status$ | async).snapshotting" placeholder="{{'LEAGUE.SELECT_LEAGUE' | translate}}">
               <mat-option *ngFor="let item of leagues$ | async" [value]="item">{{item}}</mat-option>
             </mat-select>
           </mat-form-field>
@@ -50,7 +50,7 @@
               {{ ((stashtabList$ | async) == undefined || (stashtabList$ | async).length == 0 ? 'NETWORTH.NO_STASHTABS' : 'NETWORTH.SELECT_STASHTABS') | translate}}
             </mat-label>
             <mat-select [formControl]="stashtabs" (selectionChange)="tabsChanged($event)" multiple
-              [attr.disabled]="(stashtabList$ | async).length == 0">
+              [disabled]="(stashtabList$ | async).length == 0">
               <mat-option *ngFor="let tab of stashtabList$ | async" [value]="tab.id">{{tab.n}}</mat-option>
             </mat-select>
           </mat-form-field>
@@ -73,7 +73,7 @@
             *ngIf="(lastSnapshot$ | async)">{{'NETWORTH.LAST_SNAPSHOT_LABEL_PREFIX' | translate}}
             {{getFromNow((lastSnapshot$ | async))}}</span>
         </div>
-        <button mat-raised-button color="primary" [attr.disabled]="(status$ | async).snapshotting"
+        <button mat-raised-button color="primary" [disabled]="(status$ | async).snapshotting"
           (click)="doSnapshot()">{{'ACTIONS.SNAPSHOT' | translate}}</button>
       </div>
     </div>
